Add two different Java versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: java
-./mvnw test -B:
+script:
+  - jdk_switcher use oraclejdk8
+  - ./mvnw test -B:
+  - jdk_switcher use oraclejdk7
+  - ./mvnw test -B:
