--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 script:
   - jdk_switcher use oraclejdk8
-  - ./mvnw test -B:
+  - ./mvnw test -B
   - jdk_switcher use oraclejdk7
-  - ./mvnw test -B:
+  - ./mvnw test -B
